--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,10 @@ pytest-asyncio = "^0.21.0"
 celery = {extras = ["redis"], version = "^5.2.7"}
 fastapi-admin = {git = "https://github.com/0xshodan/fastapi-admin.git"}
 pysocks = "^1.7.1"
+python-multipart = "^0.0.6"
+pyunpack = "^0.3"
+patool = "^1.12"
+aiohttp = "^3.8.4"
 
 
 [tool.poetry.group.dev.dependencies]
