--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,9 @@ python-multipart = "^0.0.6"
 pyunpack = "^0.3"
 patool = "^1.12"
 aiohttp = "^3.8.4"
+python-dotenv = "^1.0.0"
+asyncpg = "^0.27.0"
+psycopg = {extras = ["pool"], version = "^3.1.9"}
 
 
 [tool.poetry.group.dev.dependencies]
