--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,5 @@ DB_NAME=viewsbot
 PGADMIN_EMAIL=test@gmail.com
 PGADMIN_PASSWORD=admin
 CELERY_BROKER_URL=redis://redis:6379/0
+DEFAULT_ADMIN_USERNAME=admin
+DEFAULT_ADMIN_PASSWORD=admin
