--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ python-dotenv = "^1.0.0"
 asyncpg = "^0.27.0"
 psycopg = {extras = ["pool"], version = "^3.1.9"}
 loguru = "^0.7.0"
+flower = "^2.0.0"
 
 
 [tool.poetry.group.dev.dependencies]
